[package]
name = "repochecker"
description = "analyse dnf/yum repository data for broken dependencies"
license = "MIT OR Apache-2.0"

publish = false

version = "0.3.0"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = []
keywords = []
repository = "https://pagure.io/ironthree/repochecker"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
env_logger = "^0.8.1"
log = "^0.4.8"
reqwest = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "^0.5.6"
warp = "^0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

