[package]
name = "repochecker"
description = "Service for analyzing DNF / YUM repository metadata for broken dependencies"
license = "MIT OR Apache-2.0"
publish = false

version = "0.5.5"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = []
keywords = []
repository = "https://pagure.io/ironthree/repochecker"

[dependencies]
askama = "0.12"
axum = "0.6"
basic-toml = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
env_logger = "0.10"
log = "0.4.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

